# UGSort-

./: CMakeLists.txt  CMakePresets.json  README.md
UGSort/: CMakeLists.txt  INSTRUMENTS.md  IStats.h  README.md  Sorter.h  SplitStore.h  Splitter.h  UGSCfg.h  UGSort.cpp  UGSort.h
rt/: README.md
rt/Config/: UGSort.xml
rt/Stats/: Stats.md
xymorg/: AppConfig.h  Cache.h  LPBHdrs.h  Logging.h  MemoryDumper.h  ObjectPool.h  README.md  ROCache.h  StringPool.h  StringThing.h  VRMapper.h  WTCache.h  XMLMicroParser.h  consts.h  types.h  xymorg.h
xymorg/BOM/: QHierarchy.h
xymorg/CODECS/: Bitstreams.h  Chimera.h
xymorg/MP/: Cache.h  Dispatcher.h  Logger.h  MPQueues.h  Primitives.h  Task.h  ThreadPool.h  Worker.h
xymorg/WINDOWS/: strptime.h
